// Build plugins used by this project.
plugins {
    id('java')
    id('application')
    // Shadow plugin to build the fat JAR
    id('com.gradleup.shadow') version "9.4.2"
    // Badass runtime plugin to handle jlink and jpackage tasks
    id('org.beryx.runtime') version "2.0.1"
}

// Project identity and versioning.
group = 'com.gpl.rpg.atcontentstudio'
version = file('res/ATCS_latest').text.trim().replaceFirst(/^v/, '') // No letters in version numbers

def mainClassNameValue = 'com.gpl.rpg.atcontentstudio.ATContentStudio'
def releaseVersion = version.toString()

// These define the various installer types and platforms with their build target
def installerTaskSpecs = [
        [platform: 'Linux',   format: 'RPM', type: 'rpm', buildTask: 'packageLinuxRpm'],
        [platform: 'Linux',   format: 'DEB', type: 'deb', buildTask: 'packageLinuxDeb'],
        [platform: 'macOS',   format: 'DMG', type: 'dmg', buildTask: 'packageMacosDmg'],
        [platform: 'Windows', format: 'MSI', type: 'msi', buildTask: 'packageWindowsMsi'],
        [platform: 'Windows', format: 'EXE', type: 'exe', buildTask: 'packageWindowsExe'],
]

// Artifact and dependency repositories.
repositories {
    mavenCentral()
}

// Local jars are checked into lib/ and used as implementation/test dependencies.
dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'], exclude: ['junit-*.jar', '*-sources.jar'])

    testImplementation files('lib/junit-4.10.jar')
}

// Java toolchain and source jar settings.
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
    withSourcesJar()
}

def windowsConsoleMode = providers.gradleProperty('windowsConsoleMode').map { it.toBoolean() }.orElse(false).get()
def windowsIconFile = file('packaging/Windows/ATCS.ico')
def linuxIconFile = file('packaging/common/ATCS.png')

// Application entry point for Gradle run and packaged launchers.
application {
    mainClass.set(mainClassNameValue)
}

// Custom source/resource layout for the project.
sourceSets {
    main {
        java {
            setSrcDirs([
                    'src',
                    'hacked-libtiled',
                    'minify',
                    'siphash-zackehh/src/main/java'
            ])
            exclude('test/**')
        }
        resources {
            setSrcDirs([
                    'res',
                    'src',
                    'hacked-libtiled' // Needed to include the libtiled resources/map.dtd
            ])
            exclude '**/*.java'
            exclude 'build.xml'  // Exclude ant build.xml that comes with libtiled
        }
    }

    test {
        java {
            setSrcDirs(['src/test/java'])
        }
    }
}

// Build the fat jar used for packaging and runtime distribution.
shadowJar {
    archiveClassifier.set('all')
    manifest {
        attributes(
                'Manifest-Version': '1.0',
                'Main-Class': application.mainClass.get())
    }

    from('src/com/gpl/rpg/atcontentstudio/img') {
        into('com/gpl/rpg/atcontentstudio/img')
    }

    from('hacked-libtiled/tiled/io/resources') {
        into('tiled/io/resources')
    }

    from('res/ATCS_latest')
}

// Copy the shadow jar to a stable location for the IDE run configuration.
tasks.register('prepareIdeRunJar', Copy) {
    group = 'distribution'
    description = 'Copies the Shadow JAR to build/ide-run/ATCS.jar for IDE launching.'

    dependsOn tasks.named('shadowJar')

    into(layout.buildDirectory.dir('ide-run'))
    from(tasks.named('shadowJar')) {
        rename { 'ATCS.jar' }
    }
}

configurations.configureEach {
    resolutionStrategy {
        failOnVersionConflict()
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

// Keep jar packaging deterministic and avoid duplicate entries.
tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Avoid duplicate resource entries during processing.
tasks.named('processResources') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Shared distribution output used by the zip packaging task.
def distCommonDirProvider = layout.buildDirectory.dir('dist/common')

// Prepare the common distribution layout consumed by the zip package.
tasks.register('prepareDistCommon', Sync) {
    group = 'distribution'
    description = 'Prepares the common distribution directory.'

    dependsOn tasks.named('shadowJar')

    into distCommonDirProvider

    from(tasks.named('shadowJar')) {
        rename { 'ATCS.jar' }
    }

    from('packaging/common') {
        include 'ATCS.sh', 'ATCS.cmd', 'ATCS.ico'
    }
}

// Build the distributable zip archive.
tasks.register('packageZip', Zip) {
    group = 'distribution'
    description = 'Builds a zip archive similar to packaging/package.sh.'

    dependsOn tasks.named('prepareDistCommon')
    archiveBaseName.set('ATCS')
    archiveVersion.set(releaseVersion)
    archiveClassifier.set('')
    destinationDirectory = layout.buildDirectory.dir('distributions')

    from(distCommonDirProvider) {
        into 'atcs'
    }
}

// Make assemble produce the fat jar.
tasks.named('assemble') {
    dependsOn tasks.named('shadowJar')
}

// Ensure the fat jar exists before jpackage runs.
tasks.named('jpackage') {
    dependsOn tasks.named('shadowJar')
}


// Set up the profiles for building the installers for various systems
def nativePackaging = {
    def profile = [ // Defaults - this may get overridden per-platform (e.g, Linux)
            imageName: "Andor's Trail Content Studio",  // Apostrophe works on Windows
            installerName: "Andors-Trail-Content-Studio", // Github doesn't like spaces in release names
            imageOptions: [],
            installerOptions: [],
            appVersion: releaseVersion,
    ]

    if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
        if (windowsConsoleMode) {
            profile.imageOptions += ['--win-console']
            profile.installerOptions += ['--win-console']
        }
        // These options work for both .EXE and .MSI installers
        profile.installerOptions += [
                '--win-menu',       // Add to the Start menu
                '--win-menu-group', profile.imageName,
                '--win-shortcut',   // Add as a desktop shortcut
                '--win-shortcut-prompt',
                '--win-dir-chooser', // Request installation directory
                '--win-upgrade-uuid', '1b6f9c02-2751-4444-a42f-ef2d8fe65dc6', // GUID for tracking version upgrades - don't change
        ]
        profile.imageOptions += ['--icon', windowsIconFile.absolutePath]
        profile.installerOptions += ['--icon', windowsIconFile.absolutePath]
    } else if (org.gradle.internal.os.OperatingSystem.current().isLinux()) {
        // No apostrophe (') because jpackage embeds imageName in RPM shell scriptlets; apostrophes break those scripts.
        profile.imageName = "Andors Trail Content Studio"
        profile.imageOptions += ['--icon', linuxIconFile.absolutePath]
        profile.installerOptions += [
                '--icon', linuxIconFile.absolutePath,
                '--linux-shortcut',
                '--linux-package-name', 'andors-trail-content-studio',
                '--linux-menu-group', 'Programming',
                '--linux-app-category', 'Programming',
        ]
    } else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
        // MacOS doesn't like version zero, so bump the major version number +10.
        def parts = releaseVersion.tokenize('.')
        parts[0] = ((parts[0] as int) + 10).toString()
        profile.appVersion = parts.join('.')
    }
    profile
}.call()

// Configure Badass Runtime to build the runtime image only
// (we run jpackage again manually to produce the individual installer packages)
runtime {
    // Strips debugging info and compresses the bundled runtime image to save space
    options = ['--strip-debug', '--compress=zip-6', '--no-header-files', '--no-man-pages']

    // We call jpackage here to make a runtime, but the installers are built seperately
    jpackage { jp ->
        // Use the jar produced by the shadowJar task (provider mapped to filename)
        mainJar = tasks.named('shadowJar').map { it.archiveFileName.get() }.get()
        mainClass = application.mainClass.get()

        modules = [
            'java.base',
            'java.desktop',
            'java.management',
            'java.net.http',
            'java.sql'
        ]
        outputDir = 'app-image'
        imageName = nativePackaging.imageName
        imageOptions += nativePackaging.imageOptions
        if (nativePackaging.appVersion != null) {
            appVersion = nativePackaging.appVersion
        }
        skipInstaller = true
    }
}

// Helper to actually run the jpackage build for a given installer type
def jpackageExecutable = {
    def launcher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }.get()
    def binaryName = org.gradle.internal.os.OperatingSystem.current().isWindows() ? 'jpackage.exe' : 'jpackage'
    def installationDir = launcher.metadata.installationPath.asFile
    installationDir.toPath().resolve("bin/${binaryName}").toFile().absolutePath
}

// Set up the packageXXX targets to compose the built app image into an installer
installerTaskSpecs.each { spec ->
    tasks.register(spec.buildTask, Exec) {
        group = 'distribution'
        description = "Builds the ${spec.platform} ${spec.format} installer."
        workingDir = projectDir

        dependsOn tasks.named('jpackageImage')

        def appImageName = org.gradle.internal.os.OperatingSystem.current().isMacOsX() ?
                "${nativePackaging.imageName}.app" :
                nativePackaging.imageName
        def jpackageArgs = [
                '--type', spec.type,
                '--app-image', layout.buildDirectory.dir("app-image/${appImageName}").get().asFile.absolutePath,
                '--dest', layout.buildDirectory.dir('distributions').get().asFile.absolutePath,
        ]

        if (nativePackaging.appVersion != null) {
            if (spec.format == 'DMG') {
                println "macOS jpackage appVersion = ${nativePackaging.appVersion}"
            }
            jpackageArgs += ['--app-version', nativePackaging.appVersion]
        }

        jpackageArgs += nativePackaging.installerOptions

        commandLine([jpackageExecutable()] + jpackageArgs)
    }
}
